# install-kernelspec

./: .gitignore  README.md  environment.yml  pyproject.toml  setup.py
.github/dependabot/: constraints.txt
.github/workflows/: ci_job.yml  pypi_job.yml
src/jupyter_kernel_install/: __main__.py
src/kernel_install/: __init__.py  _version.py  cli.py  install.py
src/kernel_install/tests/: conftest.py
